--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ComiXKCD</string>
     <string name="action_settings">Settings</string>
     <string name="close">Close</string>
+    <string name="something_went_wrong">Woops! Looks like someone pulled the plug</string>
 </resources>
