--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">ComiXKCD</string>
-    <string name="action_settings">Settings</string>
+    <string name="about">About…</string>
     <string name="close">Close</string>
     <string name="something_went_wrong">Woops! Looks like someone pulled the plug</string>
 </resources>
