--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="developed_by">Developed by</string>
     <string name="author_email">raphael.cohen@gmail.com</string>
     <string name="license">ComiXKCD is licensed under the MIT License</string>
+    <string name="share">Share</string>
 </resources>
